# vulkan-renderer-demo

./: .gitignore  CMakeLists.txt  CommandManager.cpp  CommandManager.hpp  FrameManager.cpp  FrameManager.hpp  GraphicsContext.cpp  GraphicsContext.hpp  LICENSE.txt  PipelineBuilder.cpp  PipelineBuilder.hpp  PipelineManager.cpp  PipelineManager.hpp  README.md  Shader.cpp  Shader.hpp  Swapchain.cpp  Swapchain.hpp  UtilObjects.cpp  UtilObjects.hpp  logger.cpp  logger.hpp  main.cpp  myapp.cpp  vertex_data.h
data/: CMakeLists.txt  icosahedron_gourand_shading.mtl  monkey.mtl  monkey_gourand_shading.mtl  pes.mtl
shaders/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt  main.cpp  myapp.cpp  myapp.h
src/animations/: animation.cpp  animation.hpp
src/core/: CommandManager.cpp  CommandManager.hpp  FrameManager.cpp  FrameManager.hpp  GraphicsContext.cpp  GraphicsContext.hpp  PipelineBuilder.cpp  PipelineBuilder.hpp  PipelineManager.cpp  PipelineManager.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Swapchain.cpp  Swapchain.hpp
src/resources/: DepthBuffer.cpp  DepthBuffer.hpp  ReadonlyBuffer.cpp  ReadonlyBuffer.hpp  UniformBuffer.cpp  UniformBuffer.hpp  vertex_data.h
src/scene/: Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  Scene.cpp  Scene.hpp
src/shaders/: fragment.glsl  vertex.glsl
src/utils/: Time.cpp  Time.hpp  UtilObjects.hpp  logger.hpp
